 - [ZBX-3074] moved the 'Status' column in the item list to the left (pavels)
 - [ZBX-1357] updated Brazilian Portuguese, Japanese, Polish, Russian and Ukrainian translations; thanks to Zabbix translators (Richlv)
 - [ZBX-2960] added example userparameter for partition discovery on Linux (Richlv)

Bug fixes:
 - [ZBX-4279] added an error message when trying to delete an item, that's being used as a min/max Y axis value for graphs (pavels)
 - [ZBX-4282] fixed errors when importing templates with trigger dependencies (pavels)
 - [ZBX-4108] updated FSF mailing address (Richlv)
 - [ZBX-4244] fixed inline-block container resizing in object lists in IE8 (pavels)
 - [ZBX-4297] fixed error in top 100 triggers report (Vedmak)
 - [ZBX-4258] fixed link to the template prototype item in the caption of the item editing form (pavels)
 - [ZBX-3510] fixed discovery and it's prototype cloning when cloning a host or template (pavels)
 - [ZBX-3674] fixed possible editing of lld created elements (Vedmak)
 - [ZBX-3113] made nanoseconds patch mandatory for upgrading from 1.8 to 2.0 (asaveljevs)
 - [ZBX-3468] fixed error messages and warnings with enabled SQLite3 support in front-end (Alexei)
 - [ZBX-4056] fixed dependencies not added when template linked to host (Vedmak)
 - [ZBX-4315] fixed the 'close' link in the tooltips (pavels)
 - [ZBX-3675] fixed items created via API for template have wrong interfaceid on linked host (Vedmak)
 - [ZBX-4212] fixed creation of trigger expression with "])" in item key (Vedmak)
 - [ZBXNEXT-675] reduced surrounding whitespace for Switch, Cloud, Crypto-router, UPS, Hub and Router map icons (Elvis, Richlv)
 - [ZBX-4305] removed CREDITS file (Richlv)
 - [ZBX-2504] replaced 'Groups' by 'Replace host groups' in host mass-update form to avoid confusion (Alexei)
 - [ZBX-2960] added defaults for example userparameters vfs.dir.size (/tmp) and proc.cpu (zabbix_agentd) to avoid errors in 'zabbix_agentd -p', documented them (Richlv)