@@ -53,9 +53,7 @@ local $uniq;
 	"t_image"	=>	"longblob",
 	"t_history_log"	=>	"text",
 	"t_history_text"=>	"text",
-	"t_blob"	=>	"blob",
 	"t_text"	=>	"text",
-	"t_item_param"	=>	"text",
 	"t_cksum_text"	=>	"text"
 );
 
@@ -74,9 +72,7 @@ local $uniq;
 	"t_image"	=>	"ZBX_TYPE_BLOB",
 	"t_history_log"	=>	"ZBX_TYPE_TEXT",
 	"t_history_text"=>	"ZBX_TYPE_TEXT",
-	"t_blob"	=>	"ZBX_TYPE_BLOB",
 	"t_text"	=>	"ZBX_TYPE_TEXT",
-	"t_item_param"	=>	"ZBX_TYPE_TEXT",
 	"t_cksum_text"	=>	"ZBX_TYPE_TEXT"
 );
 
@@ -121,9 +117,7 @@ const ZBX_TABLE	tables[]={
 	"t_image"	=>	"blob",
 	"t_history_log"	=>	"nclob",
 	"t_history_text"=>	"nclob",
-	"t_blob"	=>	"nvarchar2(2048)",
-	"t_text"	=>	"nclob",
-	"t_item_param"	=>	"nvarchar2(2048)",
+	"t_text"	=>	"nvarchar2(2048)",
 	"t_cksum_text"	=>	"nclob"
 );
 
@@ -144,9 +138,7 @@ const ZBX_TABLE	tables[]={
 	"t_history_text"=>	"varchar(2048)",
 	"t_time"	=>	"integer",
 	"t_nanosec"	=>	"integer",
-	"t_blob"	=>	"varchar(2048)",
 	"t_text"	=>	"varchar(2048)",
-	"t_item_param"	=>	"varchar(2048)",
 	"t_cksum_text"	=>	"varchar(2048)"
 );
 
@@ -167,9 +159,7 @@ const ZBX_TABLE	tables[]={
 	"t_history_text"=>	"text",
 	"t_time"	=>	"integer",
 	"t_nanosec"	=>	"integer",
-	"t_blob"	=>	"text",
 	"t_text"	=>	"text",
-	"t_item_param"	=>	"text",
 	"t_cksum_text"	=>	"text"
 );
 
@@ -189,9 +179,7 @@ const ZBX_TABLE	tables[]={
 	"t_image"	=>	"longblob",
 	"t_history_log"	=>	"text",
 	"t_history_text"=>	"text",
-	"t_blob"	=>	"blob",
 	"t_text"	=>	"text",
-	"t_item_param"	=>	"text",
 	"t_cksum_text"	=>	"text"
 );
 
