@@ -1,1 +1,3 @@
-ALTER TABLE maintenances MODIFY maintenanceid bigint unsigned NOT NULL;
+ALTER TABLE maintenances
+	MODIFY maintenanceid bigint unsigned NOT NULL,
+	MODIFY description text NOT NULL;
