@@ -1,1 +1,3 @@
-ALTER TABLE regexps MODIFY regexpid bigint unsigned NOT NULL;
+ALTER TABLE regexps
+	MODIFY regexpid bigint unsigned NOT NULL,
+	MODIFY test_string text NOT NULL;
