@@ -93,11 +93,13 @@ DROP TABLE tmp_events_eventid;
 ---- Patching table `triggers`
 ----
 
-ALTER TABLE triggers MODIFY triggerid bigint unsigned NOT NULL,
-		     MODIFY templateid bigint unsigned NULL,
-		     DROP COLUMN dep_level,
-		     ADD value_flags integer DEFAULT '0' NOT NULL,
-		     ADD flags integer DEFAULT '0' NOT NULL;
+ALTER TABLE triggers
+	MODIFY triggerid bigint unsigned NOT NULL,
+	MODIFY templateid bigint unsigned NULL,
+	MODIFY comments text NOT NULL,
+	DROP COLUMN dep_level,
+	ADD value_flags integer DEFAULT '0' NOT NULL,
+	ADD flags integer DEFAULT '0' NOT NULL;
 UPDATE triggers SET templateid=NULL WHERE templateid=0;
 CREATE TEMPORARY TABLE tmp_triggers_triggerid (triggerid bigint unsigned PRIMARY KEY);
 INSERT INTO tmp_triggers_triggerid (triggerid) (SELECT triggerid FROM triggers);
