@@ -18,19 +18,19 @@ CREATE TABLE host_inventory (
 	macaddress_a             nvarchar2(64)   DEFAULT ''                ,
 	macaddress_b             nvarchar2(64)   DEFAULT ''                ,
 	hardware                 nvarchar2(255)  DEFAULT ''                ,
-	hardware_full            nclob           DEFAULT ''                ,
+	hardware_full            nvarchar2(2048) DEFAULT ''                ,
 	software                 nvarchar2(255)  DEFAULT ''                ,
-	software_full            nclob           DEFAULT ''                ,
+	software_full            nvarchar2(2048) DEFAULT ''                ,
 	software_app_a           nvarchar2(64)   DEFAULT ''                ,
 	software_app_b           nvarchar2(64)   DEFAULT ''                ,
 	software_app_c           nvarchar2(64)   DEFAULT ''                ,
 	software_app_d           nvarchar2(64)   DEFAULT ''                ,
 	software_app_e           nvarchar2(64)   DEFAULT ''                ,
-	contact                  nclob           DEFAULT ''                ,
-	location                 nclob           DEFAULT ''                ,
+	contact                  nvarchar2(2048) DEFAULT ''                ,
+	location                 nvarchar2(2048) DEFAULT ''                ,
 	location_lat             nvarchar2(16)   DEFAULT ''                ,
 	location_lon             nvarchar2(16)   DEFAULT ''                ,
-	notes                    nclob           DEFAULT ''                ,
+	notes                    nvarchar2(2048) DEFAULT ''                ,
 	chassis                  nvarchar2(64)   DEFAULT ''                ,
 	model                    nvarchar2(64)   DEFAULT ''                ,
 	hw_arch                  nvarchar2(32)   DEFAULT ''                ,
@@ -41,7 +41,7 @@ CREATE TABLE host_inventory (
 	url_a                    nvarchar2(255)  DEFAULT ''                ,
 	url_b                    nvarchar2(255)  DEFAULT ''                ,
 	url_c                    nvarchar2(255)  DEFAULT ''                ,
-	host_networks            nclob           DEFAULT ''                ,
+	host_networks            nvarchar2(2048) DEFAULT ''                ,
 	host_netmask             nvarchar2(39)   DEFAULT ''                ,
 	host_router              nvarchar2(39)   DEFAULT ''                ,
 	oob_ip                   nvarchar2(39)   DEFAULT ''                ,
@@ -59,21 +59,21 @@ CREATE TABLE host_inventory (
 	site_country             nvarchar2(64)   DEFAULT ''                ,
 	site_zip                 nvarchar2(64)   DEFAULT ''                ,
 	site_rack                nvarchar2(128)  DEFAULT ''                ,
-	site_notes               nclob           DEFAULT ''                ,
+	site_notes               nvarchar2(2048) DEFAULT ''                ,
 	poc_1_name               nvarchar2(128)  DEFAULT ''                ,
 	poc_1_email              nvarchar2(128)  DEFAULT ''                ,
 	poc_1_phone_a            nvarchar2(64)   DEFAULT ''                ,
 	poc_1_phone_b            nvarchar2(64)   DEFAULT ''                ,
 	poc_1_cell               nvarchar2(64)   DEFAULT ''                ,
 	poc_1_screen             nvarchar2(64)   DEFAULT ''                ,
-	poc_1_notes              nclob           DEFAULT ''                ,
+	poc_1_notes              nvarchar2(2048) DEFAULT ''                ,
 	poc_2_name               nvarchar2(128)  DEFAULT ''                ,
 	poc_2_email              nvarchar2(128)  DEFAULT ''                ,
 	poc_2_phone_a            nvarchar2(64)   DEFAULT ''                ,
 	poc_2_phone_b            nvarchar2(64)   DEFAULT ''                ,
 	poc_2_cell               nvarchar2(64)   DEFAULT ''                ,
 	poc_2_screen             nvarchar2(64)   DEFAULT ''                ,
-	poc_2_notes              nclob           DEFAULT ''                ,
+	poc_2_notes              nvarchar2(2048) DEFAULT ''                ,
 	PRIMARY KEY (hostid)
 );
 ALTER TABLE host_inventory ADD CONSTRAINT c_host_inventory_1 FOREIGN KEY (hostid) REFERENCES hosts (hostid) ON DELETE CASCADE;
@@ -96,19 +96,19 @@ CREATE TABLE t_host_inventory (
 	macaddress_a             nvarchar2(64),
 	macaddress_b             nvarchar2(64),
 	hardware                 nvarchar2(255),
-	hardware_full            nclob,
+	hardware_full            nvarchar2(2048),
 	software                 nvarchar2(255),
-	software_full            nclob,
+	software_full            nvarchar2(2048),
 	software_app_a           nvarchar2(64),
 	software_app_b           nvarchar2(64),
 	software_app_c           nvarchar2(64),
 	software_app_d           nvarchar2(64),
 	software_app_e           nvarchar2(64),
-	contact                  nclob,
-	location                 nclob,
+	contact                  nvarchar2(2048),
+	location                 nvarchar2(2048),
 	location_lat             nvarchar2(16),
 	location_lon             nvarchar2(16),
-	notes                    nclob,
+	notes                    nvarchar2(2048),
 	chassis                  nvarchar2(64),
 	model                    nvarchar2(64),
 	hw_arch                  nvarchar2(32),
@@ -119,7 +119,7 @@ CREATE TABLE t_host_inventory (
 	url_a                    nvarchar2(255),
 	url_b                    nvarchar2(255),
 	url_c                    nvarchar2(255),
-	host_networks            nclob,
+	host_networks            nvarchar2(2048),
 	host_netmask             nvarchar2(39),
 	host_router              nvarchar2(39),
 	oob_ip                   nvarchar2(39),
@@ -137,22 +137,22 @@ CREATE TABLE t_host_inventory (
 	site_country             nvarchar2(64),
 	site_zip                 nvarchar2(64),
 	site_rack                nvarchar2(128),
-	site_notes               nclob,
+	site_notes               nvarchar2(2048),
 	poc_1_name               nvarchar2(128),
 	poc_1_email              nvarchar2(128),
 	poc_1_phone_a            nvarchar2(64),
 	poc_1_phone_b            nvarchar2(64),
 	poc_1_cell               nvarchar2(64),
 	poc_1_screen             nvarchar2(64),
-	poc_1_notes              nclob,
+	poc_1_notes              nvarchar2(2048),
 	poc_2_name               nvarchar2(128),
 	poc_2_email              nvarchar2(128),
 	poc_2_phone_a            nvarchar2(64),
 	poc_2_phone_b            nvarchar2(64),
 	poc_2_cell               nvarchar2(64),
 	poc_2_screen             nvarchar2(64),
-	poc_2_notes              nclob,
-	notes_ext                nclob
+	poc_2_notes              nvarchar2(2048),
+	notes_ext                nvarchar2(2048)
 );
 
 -- select all profiles into temporary table
